--- a/views/index.html
+++ b/views/index.html
@@ -1,4 +1,3 @@
-{{define "index"}}
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -14,8 +13,7 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
 
-    Hello, {{.}}!
+    Hello, {{ .Title }}!
 
   </body>
 </html>
-{{end}}
